--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
     <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css">
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/d3-geomap@3.3.0/dist/d3-geomap.min.css"/>
+    <link rel="stylesheet" href="./styles.css"> 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <script type="text/javascript" src= "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore.js"></script> 
+    <script src="https://unpkg.com/topojson@3/dist/topojson.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3-geomap@3.3.0/dist/d3-geomap.min.js"></script>
 </head>
 
 <body>
@@ -24,18 +27,14 @@
         </div>
         <div class="separate">
             <div class="grid">
-                <div class="info"></div>
+                <div class="info"></div> 
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-5" id="grids"></div>
+                        <div class="col-sm-7 d3-geomap" id="mappppp"></div>
+                    </div>
+                </div>
             </div>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                <li class="page-item"><a class="page-link" id ="CA" href="#">CA</a></li>
-                <li class="page-item"><a class="page-link" id ="TX" href="#">TX</a></li>
-                <li class="page-item"><a class="page-link" id ="FL" href="#">FL</a></li>
-                <li class="page-item"><a class="page-link" id ="GA" href="#">GA</a></li>
-                <li class="page-item"><a class="page-link" id ="CO" href="#">CO</a></li>
-                </ul>
-            </nav>
-            <!-- <img class="icon achievement" id="achievement" src="icons/achievement.svg" height="35" width="35"> -->
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -47,6 +46,14 @@
 
     <!-- Render script -->
     <script>
+        const stateCodeToFips = {"AK": "02", "AL": "01", "AR": "05", "AS": "60", "AZ": "04", "CA": "06", "CO": "08", "CT": "09", "DC": "11", "DE": "10", "FL": "12", "GA": "13", "GU": "66", "HI": "15", "IA": "19", "ID": "16", "IL": "17", "IN": "18", "KS": "20", "KY": "21", "LA": "22", "MA": "25", "MD": "24", "ME": "23", "MI": "26", "MN": "27", "MO": "29", "MS": "28", "MT": "30", "NC": "37", "ND": "38", "NE": "31", "NH": "33", "NJ": "34", "NM": "35", "NV": "32", "NY": "36", "OH": "39", "OK": "40", "OR": "41", "PA": "42", "PR": "72", "RI": "44", "SC": "45", "SD": "46", "TN": "47", "TX": "48", "UT": "49", "VA": "51", "VI": "78", "VT": "50", "WA": "53", "WI": "55", "WV": "54", "WY": "56"};
+        const fipsToStateCode = Object.entries(stateCodeToFips).reduce((ret, entry) => {
+            const [ key, value ] = entry;
+            ret[ value ] = key;
+            return ret;
+        }, {});
+
+
         const squareSize = 9; // length of a side of a square
         const strokeWidth = 1.3;
         const numPerRow = 30;
@@ -60,35 +67,45 @@
             left: 5,
         }
         var myColor = d3.scaleSequential()
-            .interpolator(d3.interpolateReds)
-            .domain([-20,150]);
+        .interpolator(d3.interpolateReds)
+        .domain([-20,150]);
 
         // Create scale
         const scale = d3.scaleLinear()
-            .domain([0, numPerRow])
-            .range([0, w]);
+        .domain([0, numPerRow])
+        .range([0, w]);
 
         // Create the svg
-        var svg = d3.select(".grid").append('svg')
-            .attr('class', 'chart')
-            .attr('width', w + margin.left + margin.right)
-            .attr('height', h + margin.top + margin.bottom)
+        var svg = d3.select("#grids").append('svg')
+        .attr('class', 'chart')
+        .attr('width', w + margin.left + margin.right)
+        .attr('height', h + margin.top + margin.bottom)
         var chart = svg.append('g')
-            .attr('transform', `translate(${margin.left}, ${margin.top})`)
+        .attr('transform', `translate(${margin.left}, ${margin.top})`)
 
         // create div for tooltip
         var tooltip = d3.select(".info").append("div")
-            .attr("class", "tooltip")
-            .style("opacity", 0);
+        .attr("class", "tooltip")
+        .style("opacity", 0);
+
+        // create map
+        var map = d3.choropleth()
+        .geofile('https://cdn.jsdelivr.net/npm/d3-geomap@3.3.0/dist/topojson/countries/USA.json')
+        .projection(d3.geoAlbersUsa)
+        .height(h + margin.top + margin.bottom)
+        .column('count')
+        .unitId('fips')
+        .scale(750)
+        .legend(true);
 
         /**
          * Render the data into the visualization layout.
          */
-        function render() {
+         function render() {
             d3.csv("data/death-by-police.csv").then(function (raw_data) {
                 let data = raw_data
                     .filter(d => d.date.substring(0,4) == '2019'); // data in year 2019
-                
+
                 let countByState = d3.rollup(data, v => v.length, d => d.state); //count of each state
                 data.sort((a, b) => d3.descending(countByState.get(a.state), countByState.get(b.state))); // sort by count
 
@@ -99,44 +116,47 @@
 
                 // Append new squares
                 const squares = chart.selectAll('rect')
-                    .data(data, function (d) { return d.name; })
+                .data(data, function (d) { return d.name; })
 
                 squares.enter().append('rect')
-                    .attr('x', (d, i) => {
-                        const n = i % numPerRow;
-                        return scale(n);
-                    })
-                    .attr('y', (d, i) => {
-                        const n = Math.floor(i / numPerRow);
-                        return scale(n);
-                    })
-                    .attr('fill','var(--grey1)')
-                    .attr('ry', 10)
-                    .attr('rx', 10)
-                    .attr('width', squareSize)
-                    .attr('height', squareSize)
-                    .on("mouseover", handleMouseOver)
-                    .on("mouseout", handleMouseOut)
-                    .transition().delay(function (d, i) { return .9 * i; })
-                    .attr("class", (d) => { return d.state; });
+                .attr('x', (d, i) => {
+                    const n = i % numPerRow;
+                    return scale(n);
+                })
+                .attr('y', (d, i) => {
+                    const n = Math.floor(i / numPerRow);
+                    return scale(n);
+                })
+                .attr('fill','var(--grey1)')
+                .attr('ry', 10)
+                .attr('rx', 10)
+                .attr('width', squareSize)
+                .attr('height', squareSize)
+                .on("mouseover", handleMouseOver)
+                .on("mouseout", handleMouseOut)
+                .transition().delay(function (d, i) { return .9 * i; })
+                .attr("class", (d) => { return d.state; });
 
 
                 function handleMouseOver(d) {
                     // highlight rect 
                     d3.select(this).style("fill", d => myColor(countByState.get(d.state)));
                     tooltip.transition()
-                        .duration(30)
-                        .style("opacity", 1)
+                    .duration(30)
+                    .style("opacity", 1)
                     tooltip.html("Age: " + d.age + "<br>Gender: " + d.gender + "<br>Location: " + d.city + ", "+ d.state + "<br>Flee: " + d.flee);
+
+                    d3.select('.unit-US' + stateCodeToFips[d.state]).classed("map-state-highlighted", true);
                 }
 
                 function handleMouseOut(d) {
                     // unhighlight color
                     d3.select(this).style("fill", 'var(--grey1)');
                     tooltip.transition()
-                        .duration(30)
-                        .style("opacity", 0);
-                    d3.select(this).attr("class", null)
+                    .duration(30)
+                    .style("opacity", 0);
+
+                    d3.select('.unit-US' + stateCodeToFips[d.state]).classed("map-state-highlighted", false);
                 }
 
                 function updateProportions(proportions) {
@@ -145,22 +165,21 @@
                         document.getElementById("icon-proportion-" + c).innerHTML = proportions[c] + "%";
                     }
                 }
+
+                const mapData = d3.rollups(data, v => v.length, d => d.state).map(([k, v]) => {return {fips: "US"+stateCodeToFips[k], count: v}});
+                map.postUpdate(() => {
+                    d3.selectAll('.unit')
+                    .on("mouseover", (d) => {
+                        d3.selectAll('.'+fipsToStateCode[d.properties.fips.slice(2)]).style("fill", d => myColor(countByState.get(d.state)));
+                        }).on("mouseout", (d) => {
+                            d3.selectAll('.'+fipsToStateCode[d.properties.fips.slice(2)]).style("fill", 'var(--grey1)');
+                        });
+                    })
+                .draw(d3.select('#mappppp').datum(mapData));
             });
         }
 
         render();
-
-        // Category highlighintg
-        $('.page-link').on("mouseenter", function (e) {
-            // console.log(hello)
-            highlight($(this).attr('id'));
-        });
-
-        function highlight(category) {
-            d3.selectAll("rect").attr("class", function (d) {
-                return d.state + " " + (d.state == category ? "is-active" : "is-inactive");
-            });
-        }
         
     </script>
 
