--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
                 <br><br><span style="color: white;">>> Explore more information about killed citizens by hovering over the pixels </span>
             </div>
         </div>
-        <div class="separate">
-            <div class="grid">
-                <div class="info"></div> 
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-5" id="grids"></div>
-                        <div class="col-sm-7 d3-geomap" id="mappppp"></div>
+
+        <div class="grid">
+            <div class="info"></div> 
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-5" style="padding-left: 0px" id="grids"></div>
+                    <div class="col-sm-7 d3-geomap" style="padding-right: 0px" id="mappppp">
+                        <div style="text-align: center" >>> Click the state to view more information</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -96,7 +98,7 @@
         .column('count')
         .unitId('fips')
         .scale(750)
-        .legend(true);
+        .legend(false);
 
         /**
          * Render the data into the visualization layout.
@@ -159,22 +161,16 @@
                     d3.select('.unit-US' + stateCodeToFips[d.state]).classed("map-state-highlighted", false);
                 }
 
-                function updateProportions(proportions) {
-                    let categories = Object.keys(proportions);
-                    for (c of categories) {
-                        document.getElementById("icon-proportion-" + c).innerHTML = proportions[c] + "%";
-                    }
-                }
-
                 const mapData = d3.rollups(data, v => v.length, d => d.state).map(([k, v]) => {return {fips: "US"+stateCodeToFips[k], count: v}});
                 map.postUpdate(() => {
                     d3.selectAll('.unit')
-                    .on("mouseover", (d) => {
+                    .on("click", (d) => {
                         d3.selectAll('.'+fipsToStateCode[d.properties.fips.slice(2)]).style("fill", d => myColor(countByState.get(d.state)));
-                        }).on("mouseout", (d) => {
-                            d3.selectAll('.'+fipsToStateCode[d.properties.fips.slice(2)]).style("fill", 'var(--grey1)');
-                        });
                     })
+                    .on("mouseout", (d) => {
+                        d3.selectAll('.'+fipsToStateCode[d.properties.fips.slice(2)]).style("fill", 'var(--grey1)');
+                    });
+                })
                 .draw(d3.select('#mappppp').datum(mapData));
             });
         }
