--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         </div>
 
         <div class="grid">
-            <div class="info"></div> 
+            <div class="info">
+                <div class="tooltip"></div>
+                <div class="tooltipState" style="margin-left: 65%"></div>
+            </div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-5" style="padding-left: 0px" id="grids"></div>
@@ -54,7 +57,7 @@
             ret[ value ] = key;
             return ret;
         }, {});
-
+        
 
         const squareSize = 9; // length of a side of a square
         const strokeWidth = 1.3;
@@ -86,8 +89,10 @@
         .attr('transform', `translate(${margin.left}, ${margin.top})`)
 
         // create div for tooltip
-        var tooltip = d3.select(".info").append("div")
-        .attr("class", "tooltip")
+        var tooltip = d3.select(".tooltip")
+        .style("opacity", 0);
+
+        var tooltipState = d3.select(".tooltipState")
         .style("opacity", 0);
 
         // create map
@@ -161,14 +166,27 @@
                     d3.select('.unit-US' + stateCodeToFips[d.state]).classed("map-state-highlighted", false);
                 }
 
-                const mapData = d3.rollups(data, v => v.length, d => d.state).map(([k, v]) => {return {fips: "US"+stateCodeToFips[k], count: v}});
+                // Map to Grid
+                const mapData = d3.rollups(data, v => v.length, d => d.state).map(([k, v]) => {return {fips: "US"+stateCodeToFips[k], count: v}}); // return {fip, count}
+
                 map.postUpdate(() => {
                     d3.selectAll('.unit')
                     .on("click", (d) => {
-                        d3.selectAll('.'+fipsToStateCode[d.properties.fips.slice(2)]).style("fill", d => myColor(countByState.get(d.state)));
+                        const stateName = fipsToStateCode[d.properties.fips.slice(2)];
+                        d3.selectAll('.'+stateName).style("fill", d => myColor(countByState.get(d.state)));
+
+                        tooltipState.transition()
+                            .duration(30)
+                            .style("opacity", 1)
+                        tooltipState.html("<br><br>State: " + stateName + "<br>Deaths: " + countByState.get(stateName));
                     })
                     .on("mouseout", (d) => {
-                        d3.selectAll('.'+fipsToStateCode[d.properties.fips.slice(2)]).style("fill", 'var(--grey1)');
+                        const stateName = fipsToStateCode[d.properties.fips.slice(2)];
+                        d3.selectAll('.'+ stateName).style("fill", 'var(--grey1)');
+
+                        tooltipState.transition()
+                            .duration(30)
+                            .style("opacity", 0)
                     });
                 })
                 .draw(d3.select('#mappppp').datum(mapData));
