--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <body>
     <div class="container">
         <div class="heading">
-            <div class="header"> US Death by Police</div>
-            <div class="subheader"> This dataset is about every fatal shooting in the United States by a police officer in the line of duty since January 1, 2015.
+            <div class="header"> US Fatal Shooting by Police</div>
+            <div class="subheader"> This dataset is about every fatal shooting in the United States by a police officer in the line of duty in year 2019.
                 A death is not just a statistic figure, it's a life that once lived in this world.
                 The importance of data for people who have died should not be diminished. 
-                <br><br><span style="color: white;">>> Explore more information about killed citizens by hovering over the pixels </span>
+                <br><br><span style="color: var(--red2);">>> Explore more information about killed citizens by hovering over the dots</span>
             </div>
         </div>
 
@@ -36,7 +36,9 @@
                 <div class="row">
                     <div class="col-sm-5" style="padding-left: 0px" id="grids"></div>
                     <div class="col-sm-7 d3-geomap" style="padding-right: 0px" id="mappppp">
+                        <div style="text-align: center" ><< Hover the dot to discover personal information</div>
                         <div style="text-align: center" >>> Click the state to view more information</div>
+                        
                     </div>
                 </div>
             </div>
