--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 The importance of data for people who have died should not be diminished. 
                 <br><br>
                 <div style="display: flex; align-items: stretch;color: var(--red2)">
-                    <span>>> Explore more information about killed citizens by dragging the slider</span>
-                    <div id="filter-year" style="padding-left: 30px;">
-                        <input id="year-filter" type="range" class="form-range" value="2015" min="2015" max="2019" step="1" v-model="year" style="background-color: red;">
-                        <text id="year-selected">2015</text>
-                    </div>
+                    <span>>> Explore more information about killed citizens per year by dragging the slider</span>
+                    <!-- <div id="filter-year" style="padding-left: 30px;display: flex; align-items: stretch;">
+                        <input id="year-filter" type="range" class="custom-range" value="2015" min="2015" max="2019" step="1" v-model="year">
+                        <text id="year-selected" style="padding-left: 10px">2015</text>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -120,12 +120,12 @@
 
     <!-- Render script -->
     <script>
-        document.getElementById("year-filter").addEventListener("input", e=>{
-            let year = e.target.value;
-            document.getElementById("year-selected").innerHTML = year;
-            console.log(e.target.value);
-            render();
-        });
+        // document.getElementById("year-filter").addEventListener("input", e=>{
+        //     let year = e.target.value;
+        //     document.getElementById("year-selected").innerHTML = year;
+        //     console.log(e.target.value);
+        //     render();
+        // });
 
         const stateCodeToFips = {"AK": "02", "AL": "01", "AR": "05", "AS": "60", "AZ": "04", "CA": "06", "CO": "08", "CT": "09", "DC": "11", "DE": "10", "FL": "12", "GA": "13", "GU": "66", "HI": "15", "IA": "19", "ID": "16", "IL": "17", "IN": "18", "KS": "20", "KY": "21", "LA": "22", "MA": "25", "MD": "24", "ME": "23", "MI": "26", "MN": "27", "MO": "29", "MS": "28", "MT": "30", "NC": "37", "ND": "38", "NE": "31", "NH": "33", "NJ": "34", "NM": "35", "NV": "32", "NY": "36", "OH": "39", "OK": "40", "OR": "41", "PA": "42", "PR": "72", "RI": "44", "SC": "45", "SD": "46", "TN": "47", "TX": "48", "UT": "49", "VA": "51", "VI": "78", "VT": "50", "WA": "53", "WI": "55", "WV": "54", "WY": "56"};
         const fipsToStateCode = Object.entries(stateCodeToFips).reduce((ret, entry) => {
@@ -227,10 +227,13 @@
          */
          function render() {
             d3.csv("data/death-by-police.csv").then(function (raw_data) {
-                let year = document.getElementById("year-filter").value;
-                let data = raw_data.filter(d=>d.date.substring(0,4)==year);
-                // let data = raw_data
-                //     .filter(d => d.date.substring(0,4) == year); // data in year 2019
+                
+                // let year = document.getElementById("year-filter").value;
+                // let data = raw_data.filter(d=>d.date.substring(0,4)==year);
+
+                const year = 2019;
+                let data = raw_data
+                    .filter(d => d.date.substring(0,4) == year); // data in year 2019
 
                 let countByState = d3.rollup(data, v => v.length, d => d.state); //count of each state
                 data.sort((a, b) => d3.descending(countByState.get(a.state), countByState.get(b.state)) == 0
@@ -480,7 +483,8 @@
                 const mapData = d3.rollups(data, v => v.length, d => d.state).map(([k, v]) => {return {fips: "US"+stateCodeToFips[k], count: v}}); // return {fip, count}
 
                 map.postUpdate(() => {
-                    d3.selectAll('.unit')
+                    // map.selectAll('.unit').remove();
+                    d3.selectAll('.unit')//.enter()
                     .on("click", (d) => {
                         const stateName = fipsToStateCode[d.properties.fips.slice(2)];
                         // d3.selectAll('.'+stateName).style("fill", d => myColor(countByState.get(d.state)));
