small change of front page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <h2>US FATAL SHOOTING</h2>
             <h2 class="cursive">BY POLICE</h2><br>
             <div style="padding-right: 60vw;" data-aos="fade-in">
-                <p style="text-align: left;font-size: 17px;">"When you shoot, you shoot to kill. Using your gun is the last resort."<em><br><br>- A police officer</em></p>
+                <p style="text-align: left;font-size: 17px;">"When you shoot, you shoot to kill. Using your gun is the last resort."</p>
+                <!-- <em><br><br>- A police officer</em> -->
             </div>
         </div>
     </div>
