--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
     <script src="./index.js"></script>
+    <script src="./libraries/color-legend.js"></script>
 </head>
 
 <body>
@@ -79,12 +80,15 @@
                     <div class="row">
                         <div class="col-sm-5" style="padding-left: 0px" id="grids">
                             <div><< Hover the dot to discover personal information</div>
-                            </br>
+                            <br/>
                         </div>
                         <div class="col-sm-7 d3-geomap" style="padding-right: 0px; text-align: center;" id="mappppp">
                             <div>>> Click the state to view more information</div>
-                            </br>
+                            <br/>
                         </div>
+                    </div>
+                    <div class="row justify-content-center" style="margin-top: 15px"> 
+                        <svg id="legendddd"></svg>
                     </div>
                 </div>
             </div>
@@ -168,7 +172,9 @@
 
         var myColor = d3.scaleSequential()
         .interpolator(d3.interpolateReds) // color
-        .domain([-20,150]);
+        .domain([0, 150]);
+
+        legend({color: myColor, title: "Number of Killed Citizens", width: 640, svgIn: d3.select('#legendddd')});
 
         var Ordinalcolor = d3.scaleOrdinal(d3.schemeCategory10);
 
@@ -202,7 +208,7 @@
         .height(h + margin.top + margin.bottom)
         .column('count')
         .unitId('fips')
-        .scale(750)
+        .scale(900)
         .legend(false);
 
         // // Create the gunsvg
@@ -496,38 +502,60 @@
                 const mapData = d3.rollups(data, v => v.length, d => d.state).map(([k, v]) => {return {fips: "US"+stateCodeToFips[k], count: v}}); // return {fip, count}
                 
                 d3.selectAll('.unit').remove(); // remove
-                d3.select('#mappppp>svg').remove()
+                d3.select('#mappppp>svg').remove();
+
+                let stateSelected = false;
+
+                function selectState(d) {
+                    stateSelected = true;
+
+                    const stateName = fipsToStateCode[d.properties.fips.slice(2)];
+
+                    svg.selectAll("rect")
+                        .style("fill", d => myColor(countByState.get(d.state)));
+                    svg.selectAll("rect")
+                        .filter(d => d.state !== stateName)
+                        .attr('opacity', '30%')
+                        .attr('fill', d => myColor(countByState.get(d.state)));
+
+                    d3.selectAll('.unit').filter((d2) => d !== d2).attr('opacity', '30%');
+
+                    tooltipState.transition()
+                        .duration(30)
+                        .style("opacity", 1)
+                    tooltipState.html("<br>State: " + stateName + "<br>Deaths: " + (countByState.get(stateName) || '0'))
+                                .style("color", myColor(countByState.get(stateName)));
+                }
+
+                function unselectState(d) {
+                    stateSelected = false;
+
+                    const stateName = fipsToStateCode[d.properties.fips.slice(2)];
+
+                    d3.selectAll("rect")
+                        .filter(d => d.state !== stateName)
+                        .attr('opacity', '100%');
+
+                    d3.selectAll('.unit').filter((d2) => d !== d2).attr('opacity', '100%');
+
+                    tooltipState.transition()
+                        .duration(30)
+                        .style("opacity", 0);
+                }
 
                 map.postUpdate(() => {
                     d3.selectAll('.unit')
-                        .on("click", (d) => {
-                            const stateName = fipsToStateCode[d.properties.fips.slice(2)];
-
-                            svg.selectAll("rect")
-                                .style("fill", d => myColor(countByState.get(d.state)));
-                            svg.selectAll("rect")
-                                .filter(d => d.state !== stateName)
-                                .attr('opacity', '30%')
-                                .attr('fill', d => myColor(countByState.get(d.state)));
-
-                            tooltipState.transition()
-                                .duration(30)
-                                .style("opacity", 1)
-                            tooltipState.html("<br>State: " + stateName + "<br>Deaths: " + countByState.get(stateName))
-                                        .style("color", myColor(countByState.get(stateName)));
+                        .style('fill', (d) => {
+                            return myColor(countByState.get(fipsToStateCode[d.properties.fips.slice(2)]));
                         })
-                        .on("mouseout", (d) => {
-                            const stateName = fipsToStateCode[d.properties.fips.slice(2)];
-                            // d3.selectAll('.'+ stateName).style("fill", 'var(--grey1)');
-
-                            d3.selectAll("rect")
-                                .filter(d => d.state !== stateName)
-                                .attr('opacity', '100%');
-
-                            tooltipState.transition()
-                                .duration(30)
-                                .style("opacity", 0)
-                        });
+                        .on("click", (d) => {
+                            if (stateSelected) {
+                                unselectState(d);
+                            } else {
+                                selectState(d);
+                            }
+                        })
+                        .on("mouseout", unselectState);
                     })
                     .draw(d3.select('#mappppp').datum(mapData)); //bug??
                 });
