update font of tooltip to be consistent with body tooltipState's font

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <!-- two charts -->
             <div class="grid">
                 <div class="info">
-                    <div class="tooltip" style = "margin-left: 8%"></div>
+                    <div class="tooltippp" style = "margin-left: 8%"></div>
                     <div class="tooltipState" style="margin-left: 68%"></div>
                 </div>
 
@@ -195,7 +195,7 @@
         .attr('transform', `translate(${margin.left}, ${margin.top})`)
 
         // create div for tooltip
-        var tooltip = d3.select(".tooltip")
+        var tooltip = d3.select(".tooltippp")
         .style("opacity", 0);
 
         var tooltipState = d3.select(".tooltipState")
