--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <!-- two charts -->
             <div class="grid">
                 <div class="info">
-                    <div class="tooltippp" style = "margin-left: 8%"></div>
+                    <div class="tooltippp" style = "margin-left: 8%; position:absolute"></div>
                     <div class="tooltipState" style="margin-left: 68%"></div>
                 </div>
 
