fix position issue when scrolling

--- a/index.html
+++ b/index.html
@@ -109,25 +109,32 @@
                 <div class="FL" style="padding-right: 0px" id="fl" ></div>
                 <div class="FlightMode" style="padding-right: 0px" id="flight"></div>
             </div> -->
+            <div id="storyTitle">Here is the beginning of the story >> </div>
+
         	<div id='graphic'>
+                <div id='vislegend'>
+                </div>
+                <div id='vis'>
+                </div>
             	<div id='sections'>
-                  <div id='vis'>
-                  </div>  
+                 <section class="step">
+                    <div class="title">There are 1002 fatal police shootings in 2019.</div>
+                  </section>
              	  <section class="step">
-	                <div class="title">Gun Chart</div>
-	                Write Something about gun chart. <br/><br/> The majority of the people who killed by police was armed with a gun.
+	                <div class="title">Was the gun involved? </div>
+	                The right figure shows that over half of these cases have seen an involvement of a gun. The U.S. has a high rate of deaths from gun violence. It threatens our life and makes policing be a really tough job.
 	              </section>
 	              <section class="step">
-	                <div class="title">Age Chart </div>
-	                The young age people constitute about a half of the deaths. 
+	                <div class="title">How old are they? </div>
+	                The majority of the people who were killed are over 20. But we can see the young age people constitute about a half of the deaths. It is a sad fact that teenagers were killed in fatal by the police.
 	              </section>
 	              <section class="step">
-	                <div class="title">Flee Chart</div>
-	                many people are not fleeing when they are killed. In this situation, do the police officers really need to kill them? 
+	                <div class="title">Were they fleeing?</div>
+	                It is interesting that more than 1/2 of the people were not fleeing when they were killed. <br/><br/> In this situation, do the police officers really need to kill them? 
 	              </section>
+                </div>
                   <div id="extra-space">
                   </div>
-	            </div>
         	</div>
     	</div>
     </section>
