--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <p class="small" style="text-align: right;"><b >MIT 6.859 : Data Visualization</b><br>by Rui Wang, <br>Jiahui Tang, <br>and Zilin Zou</p>
+                    <p class="small" style="text-align: right;"><b >MIT 6.859 : Data Visualization</b><br>by Rui Wang, <br>Jiahui Tang, <br>and Silin Zou</p>
                 </div>
             </div>
         </div>
