--- a/index.html
+++ b/index.html
@@ -318,17 +318,17 @@
 
                     const stateName = fipsToStateCode[d.properties.fips.slice(2)];
 
-                    if (!arrayOfSelected.includes(stateName)){ 
-                        //add state into array
-                        arrayOfSelected.push(stateName);
-                    }else{
-                        //remove state from array
-                        let i = arrayOfSelected.indexOf(stateName); 
-                        if (i===0)
-                        {arrayOfSelected=[]}
-                        else
-                        {arrayOfSelected.splice(i,i);};
-                    };
+                    // if (!arrayOfSelected.includes(stateName)){ 
+                    //     //add state into array
+                    //     arrayOfSelected.push(stateName);
+                    // }else{
+                    //     //remove state from array
+                    //     let i = arrayOfSelected.indexOf(stateName); 
+                    //     if (i===0)
+                    //     {arrayOfSelected=[]}
+                    //     else
+                    //     {arrayOfSelected.splice(i,i);};
+                    // };
                     // console.log(arrayOfSelected);
 
                     svg.selectAll("rect")
@@ -358,7 +358,7 @@
                         .filter(d => d.state !== stateName)
                         .attr('opacity', '30%')
                         .attr('fill', d => myColor(countByState.get(d.state)));
-                    d3.selectAll('.unit').filter(d2 => d !== d2).attr('opacity', '100%');
+                    d3.selectAll('.unit').filter(d2 => d !== d2).attr('opacity', '50%');
 
                     tooltipState.transition()
                         .duration(30)
