--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/d3-geomap@3.3.0/dist/d3-geomap.min.css"/>
     <link rel="stylesheet" href="css/styles.css"> 
     <link rel="stylesheet" href="css/aos.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700,900&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet"> -->
 
     <script type="text/javascript" src= "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore.js"></script> 
     <script src="https://unpkg.com/topojson@3/dist/topojson.min.js"></script>
@@ -103,10 +103,8 @@
         <div class="container">
             <div id="storyTitle">Here is the beginning of the analysis >> </div>
         	<div id='graphic'>
-                <div id='vislegend'>
-                </div>
-                <div id='vis'>
-                </div>
+                
+                <div id='vis'><div id='vislegend'></div></div>
             	<div id='sections'>
                  <section class="step">
                     <div class="title">There are 1002 fatal police shootings in 2019.</div>
@@ -124,8 +122,7 @@
 	                It is interesting that more than 1/2 of the people were not fleeing when they were killed. <br/><br/> In this situation, do the police officers really need to kill them? 
 	              </section>
                 </div>
-                  <div id="extra-space">
-                  </div>
+                  <div id="extra-space"></div>
         	</div>
     	</div>
     </section>
