--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- Details -->
     <section id="section3" class="cd-section nav-section">
         <div class="container">
-            <div id="storyTitle">Here is the beginning of the analysis >> </div>
+            <div id="storyTitle">>> Here is the beginning of the analysis  </div>
         	<div id='graphic'>
                 
                 <div id='vis'><div id='vislegend'></div></div>
