--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div id='vis'><div id='vislegend'></div></div>
             	<div id='sections'>
                  <section class="step">
-                    <div class="title">There are 1002 fatal police shootings in 2019.</div>
+                    <div class="title">There are <text id="S_Number">994</text> fatal police shootings in <text id="S_Year">2015</text>.</div>
                   </section>
              	  <section class="step">
 	                <div class="title">Was the gun involved? </div>
@@ -152,6 +152,7 @@
         document.getElementById("year-filter").addEventListener("input", e=>{
             let year = e.target.value;
             document.getElementById("year-selected").innerHTML = year;
+            document.getElementById("S_Year").innerHTML = year;
             console.log(e.target.value);
             render();
             scroll_display();
