scrolling text revised

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="section3" class="cd-section nav-section">
         <div class="container">
             <div id="storyTitle">>> Here is the beginning of the analysis  </div>
-        	<div id='graphic' style="height: 1700px; margin-bottom: 30px;">
+        	<div id='graphic' >
                 
                 <div id='vis'><div id='vislegend'></div></div>
             	<div id='sections'>
@@ -109,15 +109,15 @@
                   </section>
              	  <section class="step">
 	                <div class="title">Was the gun involved? </div>
-	                The right figure shows that over half of these cases have seen an involvement of a gun. The U.S. has a high rate of deaths from gun violence. It threatens our life and makes policing be a really tough job.
+	                Over half of fatal shootings by a police officer include the deceased being armed with a gun. It makes policing be a tough job.
 	              </section>
 	              <section class="step">
 	                <div class="title">How old are they? </div>
-	                The majority of the people who were killed are over 20. But we can see the young age people constitute about a half of the deaths. It is a sad fact that teenagers were killed in fatal by the police.
+	                It is a sad fact that the majority of the people killed in fatal encounters were children and young adults. 
 	              </section>
 	              <section class="step">
 	                <div class="title">Were they fleeing?</div>
-	                It is interesting that more than 1/2 of the people were not fleeing when they were killed. <br/><br/> In this situation, do the police officers really need to kill them? 
+	                Around 60% of those killed in these encounters were not fleeing from the scene. <br/><br/> In this situation, was a shot to kill a necessity?
 	              </section>
                 </div>
                   <!-- <div id="extra-space"></div> -->
